--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "com.unity.ads": "2.0.8",
     "com.unity.analytics": "2.0.16",
     "com.unity.package-manager-ui": "1.9.11",
     "com.unity.postprocessing": "2.0.15-preview",
     "com.unity.probuilder": "3.0.9",
+    "com.unity.purchasing": "2.0.3",
     "com.unity.render-pipelines.core": "3.0.0-preview",
     "com.unity.render-pipelines.lightweight": "3.0.0-preview",
     "com.unity.shadergraph": "3.0.0-preview",
@@ -36,6 +38,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
