--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,10 +4,11 @@
     "com.unity.analytics": "2.0.16",
     "com.unity.cinemachine": "2.2.8",
     "com.unity.package-manager-ui": "1.9.11",
-    "com.unity.postprocessing": "2.1.3",
+    "com.unity.postprocessing": "2.1.4",
     "com.unity.probuilder": "3.0.9",
     "com.unity.purchasing": "2.0.3",
     "com.unity.render-pipelines.core": "3.0.0-preview",
+    "com.unity.render-pipelines.high-definition": "3.0.0-preview",
     "com.unity.render-pipelines.lightweight": "3.0.0-preview",
     "com.unity.shadergraph": "3.0.0-preview",
     "com.unity.standardevents": "1.0.13",
