--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,21 @@
 {
   "dependencies": {
     "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.2.2",
-    "com.unity.cinemachine": "2.2.8",
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.postprocessing": "2.1.3",
+    "com.unity.analytics": "3.3.2",
+    "com.unity.cinemachine": "2.3.3",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.multiplayer-hlapi": "1.0.2",
+    "com.unity.package-manager-ui": "2.1.2",
+    "com.unity.postprocessing": "2.1.4",
     "com.unity.probuilder": "3.0.9",
-    "com.unity.purchasing": "2.0.3",
-    "com.unity.render-pipelines.core": "4.1.0-preview",
-    "com.unity.render-pipelines.lightweight": "4.1.0-preview",
-    "com.unity.shadergraph": "4.1.0-preview",
-    "com.unity.textmeshpro": "1.3.0",
+    "com.unity.purchasing": "2.0.6",
+    "com.unity.render-pipelines.core": "5.7.2",
+    "com.unity.render-pipelines.lightweight": "5.7.2",
+    "com.unity.shadergraph": "5.7.2",
+    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.timeline": "1.0.0",
     "com.unity.vectorgraphics": "1.0.0-preview.21",
+    "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.xr.oculus.android": "1.29.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
